force-app/main/default/objects/Customer_Quota_Change__c/Customer_Quota_Change__c.object-meta.xml
<CustomObject>
    <label>Credit Limit Application</label>
    <nameField>
        <displayFormat>CLA-{000000}</displayFormat>
        <label>Customer Credit Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>