force-app/main/default/objects/Customer_Quota_Change__c/fields/C_C_Approve__c.field-meta.xml
<CustomField>
    <fullName>C_C_Approve__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C&amp;C Approve</label>
    <type>Checkbox</type>
</CustomField>