force-app/main/default/objects/Customer_Quota_Change__c/fields/Clean_Line_USD__c.field-meta.xml
<CustomField>
    <fullName>Clean_Line_USD__c</fullName>
    <label>Clean Line (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>