force-app/main/default/objects/Customer_Quota_Change__c/fields/Customer_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Customer_Credit_Limit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Credit Limit</label>
    <referenceTo>Customer_Credit_Info__c</referenceTo>
    <relationshipName>Customer_Quota_Change</relationshipName>
    <type>Lookup</type>
</CustomField>