force-app/main/default/objects/Customer_Quota_Change__c/fields/Customer_Credit_Line__c.field-meta.xml
<CustomField>
    <fullName>Customer_Credit_Line__c</fullName>
    <label>Customer Credit Line</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>