force-app/main/default/objects/Customer_Quota_Change__c/fields/Guarantee_Credit_Line_USD__c.field-meta.xml
<CustomField>
    <fullName>Guarantee_Credit_Line_USD__c</fullName>
    <label>Guarantee Credit Line (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>