force-app/main/default/objects/Customer_Quota_Change__c/fields/Local_Credit_Limit2_USD__c.field-meta.xml
<CustomField>
    <fullName>Local_Credit_Limit2_USD__c</fullName>
    <label>Local Credit Line2 (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>