force-app/main/default/objects/Customer_Quota_Change__c/fields/Original_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Original_Credit_Limit__c</fullName>
    <label>Original Credit Line (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>