force-app/main/default/objects/Customer_Quota_Change__c/fields/Original_Credit_limit_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Credit_limit_Expiration_Date__c</fullName>
    <description>原信用额度有效期</description>
    <label>Original Credit Line Expiration Date</label>
    <type>Date</type>
</CustomField>