force-app/main/default/objects/Customer_Quota_Change__c/fields/Post_Application_Credit__c.field-meta.xml
<CustomField>
    <fullName>Post_Application_Credit__c</fullName>
    <label>Applied Credit Line (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>