force-app/main/default/objects/Customer_Quota_Change__c/fields/Sinosure_Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Sinosure_Payment_Term__c</fullName>
    <label>Sinosure Payment Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>