force-app/main/default/objects/Customer_Quota_Change__c/fields/Valid_After_Change_To__c.field-meta.xml
<CustomField>
    <fullName>Valid_After_Change_To__c</fullName>
    <description>变更后有效期至</description>
    <label>Customer Credit Line Expiration Date</label>
    <type>Date</type>
</CustomField>